--- a/modules/core/templates/welcome.twig
+++ b/modules/core/templates/welcome.twig
@@ -7,6 +7,6 @@
 
     <p>{{ 'This is the front page of the SimpleSAMLphp authentication software. There\'s not much to see here.'|trans }}</p>
 
-    <p>{{ 'If you are the administrator of this installation, please refer to the <a href="https://simplesamlphp.org/docs/">SimpleSAMLphp documentation</a> for how to configure and interact with the software.'|trans }}</p>
+    <p>{% trans %}If you are the administrator of this installation, please refer to the <a href="https://simplesamlphp.org/docs/">SimpleSAMLphp documentation</a> for how to configure and interact with the software.{% endtrans %}</p>
 
 {% endblock %}
