testing translation workflow6

--- a/templates/_header.twig
+++ b/templates/_header.twig
@@ -42,6 +42,9 @@
       </div>
     </div>
     {% endif %}
+    <div>
+    {% trans %}TestTranslationString123{% endtrans %}
+    </div>
     <div class="menuspace show-for-large">
       <div class="v-center language-bar">
         <form id="language-form" class="pure-form" method="get">
