--- a/modules/core/templates/method_not_allowed.twig
+++ b/modules/core/templates/method_not_allowed.twig
@@ -1,6 +1,6 @@
 <p>{{ 'This is most likely a configuration problem on either the service provider or identity provider.'|trans }}</p>
 
 <ul>
-    <li>{{ 'If you are an user who received this error after following a link on a site, you should report this error to the owner of that site.'|trans }}</li>
+    <li>{{ 'If you are a user who received this error after following a link on a site, you should report this error to the owner of that site.'|trans }}</li>
     <li>{{ 'If you are a developer who is deploying a single sign-on solution, you have are trying to reach an endpoint using the wrong HTTP-method.'|trans }}</li>
 </ul>
