--- a/modules/core/templates/method_not_allowed.twig
+++ b/modules/core/templates/method_not_allowed.twig
@@ -2,6 +2,5 @@
 
 <ul>
     <li>{{ 'If you are a user who received this error after following a link on a site, you should report this error to the owner of that site.'|trans }}</li>
-    <li>{{ 'If you are a developer who is deploying a single sign-on solution, you have a problem with the metadata configuration. Verify that metadata is configured correctly on both the identity provider and service provider.'|trans }}</li>
+    <li>{{ 'If you are a developer who is deploying a single sign-on solution, you have are trying to reach an endpoint using the wrong HTTP-method.'|trans }}</li>
 </ul>
-
