--- a/modules/admin/templates/metadata_converter.twig
+++ b/modules/admin/templates/metadata_converter.twig
@@ -34,7 +34,7 @@
         {% for type, text in output -%}
             {%- if text -%}
     <div class="code-box">
-        <div class="code-box-title">
+        <div id="metadata{{ loop.index }}" class="code-box-title">
             <h3>{{ type }}</h3>
             <button data-clipboard-target="#metadata{{ loop.index }}" id="btn{{ loop.index }}" class="pure-button right clipboard-btn copy">
                 <i class="fa fa-copy"></i>
@@ -59,5 +59,7 @@
     {% endif -%}
 {% endblock content -%}
 {% block postload %}
+{% if upload %}
     <script src="{{ asset('js/metadata-converter.js', 'admin') }}"></script>
+{% endif %}
 {% endblock postload %}
