Change page title. Add en/fr locales with strings
To add a language you need to put in place a fairly empty file
such as debugsp/locales/fr/LC_MESSAGES/debugsp.po

then
php bin/translations translations:update:translatable

will extract the translation strings into that file for you to translate.

--- a/modules/debugsp/templates/authsource_list.twig
+++ b/modules/debugsp/templates/authsource_list.twig
@@ -1,4 +1,4 @@
-{% set pagetitle = 'Test Authentication Sources'|trans %}
+{% set pagetitle = 'Test SP login'|trans %}
 {% set frontpage_section = 'test' %}
 {% extends "base.twig" %}
 
